# data-analysis-2021

./: .gitignore  01-exploration-movies.ipynb  01-exploration-names.ipynb  01-exploration-ratings.ipynb  01-exploration-tp.ipynb  01-exploration.ipynb  02-clustering.ipynb  03-dim-reduction.ipynb  04-classification.ipynb  README.md  pyproject.toml  utils.py
