[tool.poetry]
name = "data-analysis-2021"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilev <Maxim.Vasilev@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.1"
pandas = "^1.2.3"
numpy = "^1.20.1"
scikit-learn = "^0.24.1"
statsmodels = "^0.12.2"
tqdm = "^4.60.0"
cupy-cuda112 = "^9.0.0"
torch = "1.8.1"
spacy = {extras = ["cuda102"], version = "^3.0.6"}

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
